src/objects/Portal_Application_Right__c.object
<CustomObject>
    <description>Link object between contact and Portal Application</description>
    <label>Portal Service Access</label>
    <nameField>
        <displayFormat>APPR-{00000}</displayFormat>
        <label>Portal Application Right Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Service Access</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>ANG_Portal_Service_Role__c</fullName>
        <description>Selected service portal role</description>
        <label>Portal Service Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Pending_Detail__c</fullName>
        <label>Access Pending Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending IATA Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Access_Status_Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Airline_Prefix__c</fullName>
        <description>Used by TD to display data for CASS Airlines.</description>
        <formula>Contact__r.Account.Airline_Prefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Airline Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Contact__r.Account.IATA_ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_HQ_BR__c</fullName>
        <formula>Contact__r.Account_HQ_BO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account HQ/BR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contact__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name_Text_Field__c</fullName>
        <description>Application name to be used in roll-up fields.</description>
        <label>Application Name Text Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <formula>Portal_Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Start_Icon__c</fullName>
        <formula>CASE (TEXT(Right__c), 
   &quot;Access Granted&quot;, 
        HYPERLINK(Portal_Application__r.Application_URL__c ,
           IMAGE(
           &quot;http://thumbs.dreamstime.com/z/cursor-hand-over-start-button-15707198.jpg&quot;, 
           Name,32,32)
           ,&quot;_top&quot;)
   ,
   &quot;Access Denied&quot; ,
         IMAGE(&quot;http://apps.who.int/prequal/query/img/cross_red.gif&quot; , Name,32,32)
    ,
   &quot;Access Requested&quot; ,
         IMAGE(&quot;https://cdn1.iconfinder.com/data/icons/softwaredemo/PNG/32x32/Hourglass.png&quot; , Name,32,32)
   , &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Start Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Start_URL__c</fullName>
        <formula>Portal_Application__r.Application_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Start URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_icon_del__c</fullName>
        <formula>IMAGE( Portal_Application__r.Application_icon_URL__c ,  Portal_Application__c  , 64, 64)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_uniqueness_for_contact__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Application uniqueness for contact</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_creation_record_type__c</fullName>
        <label>Case creation record type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conctact_is_CNS__c</fullName>
        <description>CNS contacts, useful to get CNS branding on portal and emails</description>
        <formula>Contact__r.CNS_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conctact is CNS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <formula>Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_User_Portal_Status__c</fullName>
        <formula>TEXT(Contact__r.User_Portal_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact User Portal Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portal Application Rights</relationshipLabel>
        <relationshipName>Portal_Application_Rights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Currency1__c</fullName>
        <defaultValue>&quot;USD&quot;</defaultValue>
        <label>Main Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency2__c</fullName>
        <defaultValue>&quot;EUR&quot;</defaultValue>
        <label>Secondary Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activates the notification service for current application</description>
        <label>Enable Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favourite_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to know which services are the users favourites</description>
        <label>Favourite Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_access_to_OAG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this user should also get access to the OAG Application which is related to the ‘IS’ set of Applications.</description>
        <label>Has access to OAG?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <formula>Contact__r.IATA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICCS_Currency_Center_Current_Visit__c</fullName>
        <description>Technical field for ICCS Currency Center (Portal Service) to store current visit date.</description>
        <label>ICCS Currency Center Current Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ICCS_Currency_Center_Previous_Visit__c</fullName>
        <description>Technical field for ICCS Currency Center (Portal Service) to store previous visit date.</description>
        <label>ICCS Currency Center Previous Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <inlineHelpText>Please choose at least one invoice type to give rights</inlineHelpText>
        <label>Invoice Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cass Invoices</fullName>
                </value>
                <value>
                    <fullName>Passenger Invoices</fullName>
                </value>
                <value>
                    <fullName>Invoices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsSCIMIFG__c</fullName>
        <formula>IF(ISPICKVAL(Portal_Application__r.Provisioning_Type__c, &apos;SCIM&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSCIMIFG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the service is in the list of favorite services</description>
        <label>Is Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kavi_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kavi user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <description>Last time when user visited this service</description>
        <label>Last Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_modified_by_internal_user__c</fullName>
        <description>This is a helper field used by the Process Builder</description>
        <formula>NOT(CONTAINS(LastModifiedBy.Profile.Name  , &apos;ISS&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last modified by internal user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Apps__c</fullName>
        <formula>Contact__c == $User.ContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Role_Requested__c</fullName>
        <description>When the portal user has a role in the service and requests another role, this field is used to store the requested role</description>
        <label>New Role Requested</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Template__c</fullName>
        <label>Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Contact__r.Account.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalServiceTranslatedName__c</fullName>
        <description>Formula field used to render the translation of the Service Name on the Portal
In the Portal Service object, the ServiceName__c field has the same functionality but for different VF Pages</description>
        <formula>CASE(Application_Name__c, 

&quot;Join BSP / CASS&quot;, $Label.ISSP_Join_BSP_CASS, 
&quot;SIS&quot;, $Label.SIS, 
&quot;SIS Help Desk&quot;, $Label.SIS_Help_Desk, 
&quot;Management Information Report&quot;, $Label.ISSP_MIR, 
&quot;IATA Accreditation &amp; Changes&quot;, $Label.ISSP_Become_Accredited_Agent, 
&quot;CNS Endorsement &amp; Changes&quot;, $Label.ISSP_Become_Endorsed_Agent_CNS, 
&quot;BSP / CASS Change Request&quot;, $Label.ISSP_Change_Request,
&quot;BSP / CASS Change of Bank details&quot;, $Label.ISSP_AP_Bank_Details_Change,
&quot;BSPLink&quot;, $Label.ISSP_BSPLink, 
&quot;CassLink&quot;, $Label.ISSP_CassLink, 
&quot;CNS CassLink&quot;, $Label.ISSP_CASSLink_Export_CNS, 
&quot;IFAP&quot;, $Label.ISSP_IFAP, 
&quot;Resource Center&quot;, $Label.ISSP_Resource_Center, 
&quot;Simplified Interline Settlement&quot;, $Label.ISSP_Simplified_Interline_Settlement, 
&quot;Treasury Dashboard&quot;, $Label.ISSP_TD, 
&quot;Treasury Dashboard - Premium&quot;, $Label.ISSP_TD_Premium, 
&quot;Baggage Proration&quot;, $Label.ISSP_BaggageProration, 
&quot;TestApp&quot;, $Label.ISSP_TestApp, 
&quot;IATA Certificate&quot;, $Label.ISSP_IATAcertificate, 
&quot;CASSLink Plus&quot;, $Label.ISSP_Casslink_Plus, 
&quot;CASSLink Export&quot;, $Label.ISSP_CASSLink_Export, 
&quot;CASSLink Import&quot;, $Label.ISSP_CASSLink_Import, 
&quot;CASSLink Analytics&quot;, $Label.ISSP_CASSLink_Analytics, 
&quot;ICE – IATA Customer E-Statement&quot;, $Label.ISSP_Account_Statements,
&quot;ASD&quot;, $Label.ISSP_ASD,
&quot;RHC&quot;, &quot;RHC&quot;,
&quot;E-Bulletin&quot;, $Label.ISSP_EBulletin,
&quot;Standards Setting Workspace&quot;, $Label.ISSP_KAVI,
&quot;ICE – IATA Customer E-Statement&quot;,&quot;ICE - IATA Customer E-statement&quot;,
&quot;MITA Agreements&quot;, $Label.ISSP_MITA_Agreements_Service_Name,
&quot;IATA EasyPay (2C2P)&quot;, $Label.ANG_ISSP_IATA_EasyPay,
&quot;IATA EasyPay (EDENRED)&quot;, $Label.ANG_ISSP_IATA_EasyPay,
&quot;IATA EasyPay (MSTS)&quot;, $Label.ANG_ISSP_IATA_EasyPay,
&quot;IFACP Endorsement &amp; Changes&quot;, $Label.ISSP_IFACP_Endorsement_Changes,
&quot;Currency Center&quot;, $Label.ISSP_CurrencyCenter,
&quot;GSA Appointments&quot;, $Label.ISSP_AMS_MSO_GSA_GSA_Service_Name,
&quot;MSO Management&quot;, $Label.ISSP_AMS_MSO_GSA_MSO_Service_Name,
&quot;Risk Profile and RHC&quot;, IF(Contact__r.Account.IATA_ISO_Country__r.ISO_Code__c = &quot;CN&quot;, $Label.ANG_ISSP_RHC_Information_China, $Label.ANG_ISSP_RHC_Information),
&quot;ICCS&quot;, &quot;ICCS&quot;,
&quot;IATAN Online Services&quot;, $Label.ISSP_IdCard_US,
&quot;ID Card Online Platform&quot;, $Label.ISSP_IdCard_NonUS,
Application_Name__c
)</formula>
        <inlineHelpText>This formula field looks up the service Name and the points to a custom label</inlineHelpText>
        <label>PortalServiceTranslatedName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Application__c</fullName>
        <label>Portal Application</label>
        <referenceTo>Portal_Applications__c</referenceTo>
        <relationshipLabel>Portal Application Rights</relationshipLabel>
        <relationshipName>Portal_Application_Rights</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Restricted_App__c</fullName>
        <formula>Portal_Application__r.Restricted_App__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Restricted App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Right__c</fullName>
        <label>Right</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access Requested</fullName>
                    <default>true</default>
                    <label>Access Requested</label>
                </value>
                <value>
                    <fullName>Access Granted</fullName>
                </value>
                <value>
                    <fullName>Access Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Provisioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TD_Record__c</fullName>
        <formula>AND(
CONTAINS(Portal_Application__r.Name, &apos;Treasury Dashboard&apos;),
ISPICKVAL( Right__c , &apos;Access Granted&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TD Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Provisioning_Status__c</fullName>
        <label>Technical Provisioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Access Requested</fullName>
                    <default>true</default>
                    <label>Access Requested</label>
                </value>
                <value>
                    <fullName>IATA Access Granted</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>External Access Granted</fullName>
                </value>
                <value>
                    <fullName>External Access Denied</fullName>
                </value>
                <value>
                    <fullName>IATA Access Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Acceptance_Date__c</fullName>
        <description>When the user accepted terms and conditions</description>
        <label>Terms Acceptance Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Acceptance_Version__c</fullName>
        <description>Service Terms and Condition version that the user accepted</description>
        <label>Terms Acceptance Version</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terms_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if terms and conditions have been accepted</description>
        <label>Terms Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Top_Account__c</fullName>
        <description>Id of the Top Account in the account hierarchy.</description>
        <formula>IF(Contact__r.Account.Top_Parent__r.Id  &lt;&gt;  null, CASESAFEID(Contact__r.Account.Top_Parent__r.Id), CASESAFEID(Account__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>allowAssignFinContactFlowChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validation rule pevents Agency Portal Admins from directly changing the Rights for IFAP acccess. The Assign Financial Asssessment Flow can however set this flag to &quot;override&quot; the validation rule.</description>
        <label>allowAssignFinContactFlowChange</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Application_access_request</fullName>
        <active>true</active>
        <label>Application access request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_rigth</fullName>
        <active>true</active>
        <label>Application rigth</label>
    </recordTypes>
    <recordTypes>
        <fullName>Biller_Direct</fullName>
        <active>true</active>
        <label>Biller Direct</label>
    </recordTypes>
    <validationRules>
        <fullName>ACRM_MIR_Service_Contact_Restriction</fullName>
        <active>true</active>
        <description>Contacts must have certain conditions in order to have access to Service &quot;Management Information Report&quot;</description>
        <errorConditionFormula>AND(
  Application_Name__c = &apos;Management Information Report&apos;,
  ISPICKVAL(Right__c,&apos;Access Granted&apos;),
  Contact__r.Distribution_Risk_Expert__c=false,
  Contact__r.Airline_Credit_Risk_Manager__c=false,
  Contact__r.PaConf_Representative__c=false,
  NOT(ISPICKVAL(Contact__r.CEO_CFO__c,&apos;CFO&apos;)
)
)</errorConditionFormula>
        <errorMessage>You are not allow to assign &quot;Management Information Report&quot; if the contact is not one of the following:
  * Distribution Risk Expert
  * Distribution Risk Leader
  * PAConf Representative
  * or be a CFO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Biller_Direct_Granted_Invoice_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Invoice_Type__c), RecordType.Name = &quot;Biller Direct&quot;,   ISPICKVAL(Right__c , &quot;Access Granted&quot;) )</errorConditionFormula>
        <errorMessage>A least one invoice type have to be selected to grant Biller Direct Access</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cant_create_for_not_validated_users</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   ISPICKVAL(Contact__r.User_Portal_Status__c, &quot;Deactivate&quot;),
   ISPICKVAL(Contact__r.User_Portal_Status__c, &quot;Rejected&quot;)
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>The user&apos;s portal status must be validated before granting access to any application.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Internal_grant_access_by_accred_type</fullName>
        <active>true</active>
        <description>Services with the field ANG_Restrict_internal_selection__c = true can&apos;t be added or modified.</description>
        <errorConditionFormula>AND(
Portal_Application__r.ANG_Lock_access_to_accreditation_type__c,
Text(Right__c) = &apos;Access Granted&apos;,
NOT(CONTAINS(
(
IF(INCLUDES( Portal_Application__r.ANG_Restrict_by_Accreditation_Type__c ,&apos;Cash&apos;),&apos;Cash&apos;,NULL)+
IF(INCLUDES( Portal_Application__r.ANG_Restrict_by_Accreditation_Type__c ,&apos;Cashless&apos;),&apos;Cashless&apos;,NULL)+
IF(INCLUDES( Portal_Application__r.ANG_Restrict_by_Accreditation_Type__c ,&apos;Multicountry&apos;),&apos;Multicountry&apos;,NULL)
), 
TEXT(Contact__r.Account.ANG_Accreditation_Model__c)
)),
NOT(BEGINS($Profile.Name, &apos;System Administrator&apos;))
)</errorConditionFormula>
        <errorMessage>Access cannot be granted since the Agency&apos;s accreditation type for this contact does not match the portal service (Restrict by Accreditation Type).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MIR_service_for_airlines_only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Application_Name__c = &quot;Management Information Report&quot;,
    ISPICKVAL(Right__c,&apos;Access Granted&apos;),
      NOT(
      ISPICKVAL(Contact__r.Account.Sector__c,&apos;Airline&apos;)
      )
    )</errorConditionFormula>
        <errorMessage>Management Information Report portal service can only be granted for users under airline accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MR_cannot_be_approved_by_admin</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
OR (ISCHANGED(Right__c) , ISNEW() ), 
Application_Name__c = &apos;Management Information Report&apos;, 
OR(ISPICKVAL(Right__c, &apos;Access Granted&apos;), ISPICKVAL(Right__c, &apos;Access Denied&apos;)), 
$User.Mgmt_Report_Team__c = false 
)</errorConditionFormula>
        <errorMessage>The Access Status of this service can only be changed by IATA ‘Management Report’ team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OAG_Access</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Has_access_to_OAG__c = true,  NOT( TEXT(Portal_Application__r.Functional_Role__c) = &apos;Airport IS&apos;) )</errorConditionFormula>
        <errorMessage>The &apos;Has Access to OAG&apos; field is only applicable for certain services. Check the Functional Role of the related Portal Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Old_CassLink_not_available</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR (ISCHANGED(Right__c) , ISNEW() ), 
Application_Name__c = &apos;CassLink&apos;, 
OR(ISPICKVAL(Right__c, &apos;Access Granted&apos;), ISPICKVAL(Right__c, &apos;Access Denied&apos;), ISPICKVAL(Right__c, &apos;Access Requested&apos;))
)</errorConditionFormula>
        <errorMessage>This service has been discontinued and cannot be given access to.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Portal_Admin_Direct_Edit</fullName>
        <active>true</active>
        <description>Only allow Portal Admins to deny IFAP access requests, but not to grant them. Granting access must go through the Allow btn / visual flow tto ensure that  Agencies are not left without a Fin. Contact.</description>
        <errorConditionFormula>$User.ProfileId = &apos;00ew0000001QRzC&apos; &amp;&amp; Portal_Application__r.Name = &apos;IFAP&apos; &amp;&amp; (allowAssignFinContactFlowChange__c = False) &amp;&amp;  ISCHANGED(Right__c) &amp;&amp; NOT(ISPICKVAL(PRIORVALUE(Right__c), &apos;Access Requested&apos;)) &amp;&amp; ISPICKVAL(Right__c, &apos;Access Denied&apos;)</errorConditionFormula>
        <errorDisplayField>Right__c</errorDisplayField>
        <errorMessage>Please click on &apos;Cancel&apos; and use the &apos;Assign Financial Assessment Contact&apos; button on the Contact in order to Grant or Deny IFAP access.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Access_For_Payment_Providers</fullName>
        <active>true</active>
        <description>Access to the TIP Portal Service can only be granted to contacts of a Payment Provider account.</description>
        <errorConditionFormula>AND( 
Portal_Application__r.Name = &apos;Transparency in Payments (TIP)&apos;, 
OR(Text(Right__c) = &apos;Access Granted&apos;, Text(Right__c) = &apos;Access Requested&apos;), 
NOT(INCLUDES(Contact__r.Account.Account_Role__c,&apos;Payment Provider&apos;)), 
AND( 
NOT(BEGINS($Profile.Name, &apos;System Administrator&apos;)), 
NOT(BEGINS($Profile.Name, &apos;ISS&apos;)), 
NOT(BEGINS($Profile.Name, &apos;IATA Portal&apos;)), 
NOT(BEGINS($Profile.Name, &apos;identity&apos;)) 
) 
)</errorConditionFormula>
        <errorMessage>Access to the TIP Portal Service can only be granted to contacts of a Payment Provider account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_IAC_request</fullName>
        <active>false</active>
        <description>Internal users must not be able to assign an IATA Accreditation &amp; Changes portal service with Access Status = Access Requested to a contact under accounts registered as Freight Forwarders in a CNS country.</description>
        <errorConditionFormula>AND(
    OR(
    Text(Right__c) = &apos;Access Requested&apos;,
    Text(Right__c) = &apos;Access Granted&apos;),
    CONTAINS(Application_Name__c, &apos;IATA Accreditation &amp; Changes&apos;),
    OR(Contact__r.Account.CNS_Account__c ,Contact__r.Account.CNS_Agency__c),
    OR(Contact__r.Account.RecordType.DeveloperName =&apos;IATA_Agency&apos;,Contact__r.Account.RecordType.DeveloperName =&apos;Standard_Account&apos;),
    ISPICKVAL(Contact__r.Account.Sector__c,&apos;Cargo Agent&apos;),
    NOT(BEGINS($Profile.Name, &apos;System Administrator&apos;))
    )</errorConditionFormula>
        <errorMessage>Access to an IATA IATA Accreditation &amp; Changes portal service cannot be requested internally to a contact under accounts registered as Freight Forwarders in a CNS country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_IEP_request</fullName>
        <active>true</active>
        <description>Internal users must not be able to assign an IATA EasyPay portal service with Access Status = Access Requested to a contact.</description>
        <errorConditionFormula>and(
OR(
Text(Right__c) = &apos;Access Requested&apos;,
Text(Right__c) = &apos;Access Granted&apos;),
CONTAINS(Application_Name__c, &apos;IATA EasyPay&apos;),
NOT(BEGINS($Profile.Name, &apos;System Administrator&apos;)),
$Profile.Name != &apos;ISS Portal Agency Delegated Admin User&apos;,
$Profile.Name != &apos;ISS Portal Agency User (Partner)&apos;
)</errorConditionFormula>
        <errorMessage>Access to an IATA EasyPay portal service cannot be requested internally. Please ask the user to request access from the CS Portal, or the portal admin to add this user to the service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_internal_selection</fullName>
        <active>true</active>
        <description>Services with the field ANG_Restrict_internal_selection__c = true can&apos;t be added or modified.</description>
        <errorConditionFormula>AND(
	Portal_Application__r.ANG_Restrict_internal_selection__c = true,
	Text(Right__c) = &apos;Access Granted&apos;, 
	AND(
		NOT(BEGINS($Profile.Name, &apos;System Administrator&apos;)),
		AND(
			NOT(BEGINS($Profile.Name, &apos;ISS&apos;)),
			BEGINS(Portal_Application__r.Name, &apos;Global Default Insurance (GDI)&apos;)
		)
	)
)</errorConditionFormula>
        <errorMessage>Access to this portal service cannot be assigned internally. Please ask the portal user to request access, or their Portal Admin to add the user to this service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SIS_cannot_be_approved_by_admin</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 OR (ISCHANGED(Right__c) , ISNEW() ),
 Application_Name__c = &apos;SIS&apos;,
 OR(ISPICKVAL(Right__c, &apos;Access Granted&apos;), ISPICKVAL(Right__c, &apos;Access Denied&apos;)),
  $User.SIS_Team__c = false
)</errorConditionFormula>
        <errorMessage>The Access Status of this service can only be changed by IATA ‘SiS help desk&apos; team.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSO_cannot_be_approved_by_admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
  OR (ISCHANGED(Right__c) , ISNEW() ),
  OR(
    AND(
      OR(
        Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.ASD__c, 
        Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.BSPLink__c , 
        Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.CASSLinkExport__c, 
        Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.CASSLinkImport__c, 
        Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.CASSLinkRouteAnalyzer__c  
      ),
      $User.Profile_Name__c != &apos;IATA Portal Integration Profile&apos;, 
      $User.Profile_Name__c != &apos;Developer&apos;, 
      NOT(CONTAINS($Profile.Name,&quot;System Administrator&quot;))
    ),
    AND(
      Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.SIS__c,
      OR(
        Contact__r.Account.RecordType.DeveloperName = &apos;IATA_Agency&apos;,
        Contact__r.Account.RecordType.DeveloperName = &apos;Standard_Account&apos;
      ),
      NOT(CONTAINS($Profile.Name,&quot;SIS Help Desk&quot;)),
      NOT($Permission.Grant_SIS_Service),
      $User.Profile_Name__c != &apos;IATA Portal Integration Profile&apos;
    ),
    AND(
      Portal_Application__c = $Setup.ISSP_Portal_Service_Ids__c.SIS__c,
      Contact__r.Account.RecordType.DeveloperName != &apos;IATA_Agency&apos;,
      Contact__r.Account.RecordType.DeveloperName != &apos;Standard_Account&apos;,
      NOT(CONTAINS($Profile.Name,&quot;SIS Help Desk&quot;)),
      $User.Profile_Name__c != &apos;IATA Portal Integration Profile&apos;
    )
  ),
  OR(ISPICKVAL(Right__c, &apos;Access Granted&apos;), ISPICKVAL(Right__c, &apos;Access Denied&apos;),
  ISPICKVAL(Right__c, &apos;Access Requested&apos;))
)</errorConditionFormula>
        <errorMessage>The Access Status of this service can only be changed by a request coming from the external service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TD_cannot_be_approved_by_admin</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR (ISCHANGED(Right__c) , ISNEW()
 ),
 Application_Name__c = &apos;Treasury Dashboard&apos;,
 OR(ISPICKVAL(Right__c, &apos;Access Granted&apos;), ISPICKVAL(Right__c, &apos;Access Denied&apos;)), 
  $User.TD_Team__c = false
)</errorConditionFormula>
        <errorMessage>The Access Status of this service can only be changed by IATA ‘Treasury Dashboard’ team.</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Portal_Application__c</columns>
        <columns>Right__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allPartnerUsers/>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IFG_Services_Access</fullName>
        <columns>Application_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Right__c</columns>
        <columns>Technical_Provisioning_Status__c</columns>
        <columns>NAME</columns>
        <columns>IATA_Code__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Account_Name__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>contains</operation>
            <value>IFG</value>
        </filters>
        <label>IFG Services Access</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IFTP</fullName>
        <columns>NAME</columns>
        <columns>Right__c</columns>
        <columns>Account__c</columns>
        <columns>Application_Name__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Name__c</field>
            <operation>contains</operation>
            <value>IFTP</value>
        </filters>
        <filters>
            <field>Right__c</field>
            <operation>equals</operation>
            <value>Access Granted</value>
        </filters>
        <label>IFTP</label>
    </listViews>
</CustomObject>